--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -10,8 +10,10 @@ body {
 	font-family: $fontName, sans-serif;
   height: 100%;
   justify-content: center;
-  margin-top: 8rem;
-  overflow: scroll;
+  overflow-y: scroll;
+  @media (min-width: 30rem) {
+    margin-top: 8rem;
+  }
 }
 
 a {
@@ -24,15 +26,18 @@ a {
   color: #555555;
   position: relative;
   top: 0;
-  width: $width;
+  width: 100vw;
+  @media (min-width: 30rem) {
+    width: $width;
+  }
 }
 
-:global .example-appear {
+:global .board-appear {
   opacity: 0.01;
   top: 10rem;
 }
 
-:global .example-appear.example-appear-active {
+:global .board-appear.board-appear-active {
   opacity: 1;
   transition: all 0.8s ease;
   top: 0;
