--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -24,6 +24,7 @@ a {
   background: #ffffff;
   box-shadow: 1px 1px 8px 0 #cccccc;
   color: #555555;
+  margin-bottom: 4rem;
   position: relative;
   top: 0;
   width: 100vw;
