--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -1,7 +1,10 @@
 $bgColor: #fafaff;
-$linkColor: pink;
+$linkColor: #089673;
 $fontName: "Muli";
 $width: 30rem;
+
+::-moz-selection { background: hsl(340, 90%, 60%); color: white; }
+::selection { background: hsl(340, 90%, 60%); color: white; }
 
 body {
   align-items: center;
@@ -18,10 +21,40 @@ body {
 
 a {
   color: $linkColor;
+  text-decoration: none;
+}
+
+a span {
+  position: relative;
+}
+
+a span::after {
+  background: $linkColor;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 0;
+  position: absolute;
+  transition: width 0.1s ease;
+  width: 0;
+}
+
+a span:hover::after {
+  width: 100%;
+}
+
+.top {
+  background: transparent;
+}
+
+.top-header {
+  color: #33333A;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .leaderboard {
-  background: #ffffff;
   box-shadow: 1px 1px 8px 0 #cccccc;
   color: #555555;
   margin-bottom: 4rem;
