--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -59,7 +59,6 @@ a span:hover::after {
   color: #555555;
   margin-bottom: 4rem;
   position: relative;
-  top: 0;
   width: 100vw;
   @media (min-width: 30rem) {
     width: $width;
@@ -68,11 +67,11 @@ a span:hover::after {
 
 :global .board-appear {
   opacity: 0.01;
-  top: 10rem;
+  transform: translateY(10rem);
 }
 
 :global .board-appear.board-appear-active {
   opacity: 1;
   transition: all 0.8s ease;
-  top: 0;
+  transform: translateY(0);
 }
